--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cadquery-viewer",
   "displayName": "CadQuery Viewer",
   "description": "An integrated CadQuery viewer",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -43,8 +44,6 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@types/zeromq": "^5.2.1",
-    "three-cad-viewer": "^1.7.0",
-    "zeromq": "^5.2.8"
+    "three-cad-viewer": "^1.7.0"
   }
 }
