--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,3 +8,23 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+
+node_modules/three/src/**
+node_modules/three/examples/**
+!node_modules/three/examples/jsm/helpers/
+!node_modules/three/examples/jsm/lines/
+
+node_modules/three-cad-viewer/src
+node_modules/three-cad-viewer/dist/three-cad-viewer.esm.css
+node_modules/three-cad-viewer/dist/three-cad-viewer.esm.min.css
+node_modules/three-cad-viewer/dist/three-cad-viewer.esm.min.js
+node_modules/three-cad-viewer/dist/three-cad-viewer.js
+node_modules/three-cad-viewer/dist/three-cad-viewer.min.css
+node_modules/three-cad-viewer/dist/three-cad-viewer.min.js
+
+build
+cq_vscode
+cq_vscode.egg-info
+examples
+setup.py
+test.sh
