--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An integrated CadQuery viewer",
   "version": "0.9.0",
   "license": "Apache-2.0",
+  "repository": "https://github.com/bernhard-42/vscode-cadquery-viewer",
   "engines": {
     "vscode": "^1.71.0"
   },
