--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,6 @@ parse = version = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)
 
 [bumpversion:file:package.json]
 parse = "version": (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
+
+[bumpversion:file:README.md]
+parse = "version": (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
