--- a/package.json
+++ b/package.json
@@ -218,16 +218,17 @@
                 },
                 "CadQueryViewer.installCommands": {
                     "type": "object",
+                    "description": "Values {python}, {conda_env}, {cq_vscode_version} will be replaced accordingly during execution",
                     "default": {
                         "cadquery": {
                             "pip": [
-                                "env -u CONDA_PREFIX_1 pip install git+https://github.com/cadquery/cadquery.git"
+                                "env -u CONDA_PREFIX_1 {python} -m pip install git+https://github.com/cadquery/cadquery.git"
                             ],
                             "conda": [
-                                "conda install -c conda-forge -c cadquery cadquery=master"
+                                "conda install -y -n {conda_env} -c conda-forge -c cadquery cadquery=master"
                             ],
                             "mamba": [
-                                "mamba install -c conda-forge -c cadquery cadquery=master"
+                                "mamba install -y -n {conda_env} -c conda-forge -c cadquery cadquery=master"
                             ],
                             "poetry": [
                                 "poetry add git+https://github.com/cadquery/cadquery.git"
@@ -235,7 +236,7 @@
                         },
                         "build123d": {
                             "pip": [
-                                "pip install git+https://github.com/gumyr/build123d.git"
+                                "{python} -m pip install git+https://github.com/gumyr/build123d.git"
                             ],
                             "poetry": [
                                 "poetry add git+https://github.com/gumyr/build123d.git"
@@ -243,7 +244,7 @@
                         },
                         "alg123d": {
                             "pip": [
-                                "pip install git+https://github.com/bernhard-42/alg123d.git"
+                                "{python} -m pip install git+https://github.com/bernhard-42/alg123d.git"
                             ],
                             "poetry": [
                                 "poetry add git+https://github.com/bernhard-42/alg123d.git"
@@ -251,21 +252,21 @@
                         },
                         "cq_vscode": {
                             "pip": [
-                                "pip install cq_vscode=={version}"
+                                "{python} -m pip install cq_vscode=={cq_vscode_version}"
                             ],
                             "poetry": [
-                                "poetry add cq_vscode=={version}"
+                                "poetry add cq_vscode=={cq_vscode_version}"
                             ]
                         },
                         "ipython": {
                             "pip": [
-                                "pip install ipython"
+                                "{python} -m pip install ipython"
                             ],
                             "conda": [
-                                "conda install -c conda-forge ipython"
+                                "conda install -y -n {conda_env} -c conda-forge ipython"
                             ],
                             "mamba": [
-                                "mamba install -c conda-forge ipython"
+                                "mamba install -y -n {conda_env} -c conda-forge ipython"
                             ],
                             "poetry": [
                                 "poetry add ipython"
