--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "categories": [
         "Other"
     ],
-    "activationEvents": [
-        "onCommand:cadquery-viewer.cadqueryViewer"
-    ],
+    "activationEvents": [],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [
