--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "categories": [
         "Other"
     ],
-    "activationEvents": [],
+    "activationEvents": [
+        "onCommand:cadquery-viewer.cadqueryViewer"
+    ],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [
