--- a/package.json
+++ b/package.json
@@ -352,7 +352,7 @@
     "devDependencies": {
         "@types/glob": "^7.2.0",
         "@types/mocha": "^9.1.1",
-        "@types/node": "16.x",
+        "@types/node": "^16.18.12",
         "@types/vscode": "^1.71.0",
         "@typescript-eslint/eslint-plugin": "^5.31.0",
         "@typescript-eslint/parser": "^5.31.0",
